# bench

./: .gitignore  BenchUtils.hs  README  README.md  bench.cabal  stack.yaml
app/: Main.hs
src/: BenchUtils.hs
