name:                bench
version:             0.1.0.0
synopsis:            Bench
description:         Please see README.md
homepage:            http://github.com/tommd/bench
license:             BSD3
license-file:        LICENSE
author:              Tom
maintainer:          youwish@nope.com
category:            System
build-type:          Simple
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     BenchUtils
  build-depends:       base >= 4.7 && < 5
                     , unix
                     , filepath
                     , process
                     , deepseq
  default-language:    Haskell2010

executable bench
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , temporary
                     , text
                     , simple-get-opt
                     --
                     , bench
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tommd/bench
